--- a/style.css
+++ b/style.css
@@ -1,5 +1,57 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&family=Roboto:wght@400;700&display=swap');
 
+html, body, div, span, applet, object,
+iframe, h1, h2, h3, h4, h5, h6, p, blockquote,
+pre, a, abbr, acronym, address, big, cite,
+code, del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var, b,
+u, i, center, dl, dt, dd, ol, ul, li, fieldset,
+form, label, legend, table, caption, tbody,
+tfoot, thead, tr, th, td, article, aside,
+canvas, details, embed, figure, figcaption,
+footer, header, hgroup, menu, nav, output, ruby,
+section, summary, time, mark, audio, video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline; }
+
+article, aside, details, figcaption, figure,
+footer, header, hgroup, menu, nav, section {
+  display: block; }
+
+body {
+  line-height: 1; }
+
+ol, ul {
+  list-style: none; }
+
+blockquote, q {
+  quotes: none; }
+  blockquote:before, blockquote:after, q:before, q:after {
+    content: '';
+    content: none; }
+
+table {
+  border-collapse: collapse;
+  border-spacing: 0; }
+
+body {
+  -webkit-text-size-adjust: none; }
+
+mark {
+  background-color: transparent;
+  color: inherit; }
+
+input::-moz-focus-inner {
+  border: 0;
+  padding: 0; }
+
+input, select, textarea {
+  appearance: none; }
+
 :root {
     --primary-text-color: #183b56;
     --secondary-text-color: #577592;
@@ -7,39 +59,72 @@
     --accent-color-dark: #000b13d7;
     --padding-inline-section: 20px;
 }
+/* Basic */
 
-*,
-*::before,
-*::after {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
+@media screen and (max-width: 480px) {
+    html, body {
+      min-width: 320px; } }
 html {
     box-sizing: border-box;
 }
 
 body {
-    font-family: 'Poppins', sans-serif;
+    background: #fff;
+    scroll-behavior: smooth;
+    font-family: 'Poppins', 'Roboto', sans-serif;
     color: var(--primary-text-color);
 }
-
+/* Type */
+h1, h2, h3, h4, h5, h6 {
+    color: var(--primary-text-color);
+    font-family: "Roboto", serif;
+    font-weight: 700;
+    line-height: 1.5;
+    margin: 0 0 1em 0; }
+    h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
+      color: inherit;
+      text-decoration: none;
+      border-bottom: 0; }
 h1 {
-    font-size: 3rem;
+    font-size: 4em;
+    margin: 0 0 0.5em 0;
+    line-height: 1.3;
 }
 
 h2 {
-    font-size: 2rem;
+    font-size: 1.75em;
 }
 
 h3 {
-    font-size: 1.5rem;
+    font-size: 1.35em;
 }
+h4 {
+    font-size: 1.1em; }
+  
+h5 {
+    font-size: 0.9em; }
+  
+h6 {
+    font-size: 0.7em; }
+
+@media screen and (max-width: 1680px) {
+        h1 {
+          font-size: 3.5em; } }
+      
+      @media screen and (max-width: 980px) {
+        h1 {
+          font-size: 3.25em; } }
+      
+      @media screen and (max-width: 736px) {
+        h1 {
+          font-size: 2em;
+          line-height: 1.4; }
+        h2 {
+          font-size: 1.5em; } }
 
 p {
-    font-family: 'Roboto', sans-serif;
-    font-size: 1.25rem;
+    font-family: 'Poppins', sans-serif;
+    font-size: 1.25em;
     color: var(--secondary-text-color);
     line-height: 1.8rem;
 }
@@ -65,8 +150,8 @@ ul {
     background-size: 300px;
 }
 
-.top-container {
-    max-width: 768px;
+.container {
+    max-width: 1200px;
     margin: 0 auto;
 }
 
@@ -84,4 +169,39 @@ ul {
     color: #fff !important;
     padding: 5px 10px;
     transition: 0.2s ease-out;
+}
+
+/* Container */
+.container-full {
+    margin: 0 auto;
+    max-width: 100%;
+}
+.container {
+    margin: 0 auto;
+    max-width: 100%;
+    width: 1400px;
+}
+@media screen and (max-width: 1680px) {
+
+    .container {
+        width: 1200px;
+    }
+
+}
+@media screen and (max-width: 1280px) {
+
+    .container {
+        width: 100%;
+    }
+
+}
+
+.box {
+    width: 100%;
+    background: #577592;
+}
+.box h1 {
+    color: white;
+    text-align: center;
+    padding: 20px;
 }
